# wikimage

./: .gitignore  README.md  pyproject.toml
wikimage/: cli.py  tool.py
